# fardtjanst

./: .gitignore  Cargo.toml  README.md  index.html
app/: Cargo.toml  Trunk.toml  config.toml  index.html
app/js/: notifications.js
app/src/: api.rs  lib.rs  main.rs
app/src/api/: mod.rs  trips.rs
app/src/components/: credentials.rs  footer.rs  header.css  header.rs  login_credentials.css  login_credentials.rs  mod.rs  navbar.rs  register_credentials.css  register_credentials.rs
app/src/pages/: home.rs  login.rs  mod.rs  register.rs
app/src/pages/components/: credentials.rs  footer.rs  header.rs  mod.rs  navbar.rs
app/style_macros/: Cargo.toml
app/style_macros/src/: lib.rs  test.rs
desktop-app/: Cargo.toml
desktop-app/src-tauri/: tauri.conf.json
macros/: Cargo.toml
macros/src/: lib.rs
mockserver/: Cargo.toml  config.toml  data.sql  example_of_request,json  sqlite.db  sqlite.db-shm  sqlite.db-wal  sqlite.db:Zone.Identifier
mockserver/db/: Cargo.toml
mockserver/db/src/: cake.rs  fruit.rs  lib.rs
mockserver/db/src/Tables/: mod.rs  resor.rs  users.rs
mockserver/db/src/tables/: resor.rs  users.rs
mockserver/mockserverdb/: Cargo.toml
mockserver/mockserverdb/src/tables/: mod.rs  resor.rs
mockserver/src/: main.rs
mockserver/src/db/: mod.rs
mockserver/src/db/tables/: tempsessions.rs  users.rs
mockserver/src/routes/: mod.rs  trips.rs
mockserver/src/routes/api/: autherization_route.rs  mod.rs  order_route.rs  profile_route.rs  remove_route.rs  tripsSerilizing.rs  trips_route.rs
server/: Cargo.toml  config.toml  private_key.pem  sqlite.db
server/db/: Cargo.toml
server/db/src/: lib.rs
server/db/src/tables/: mod.rs  users.rs
server/src/: main.rs
server/src/api/: authentication.rs
server/src/backgroundtask/: background_prosses.rs  check_trip.rs  errors.rs  mod.rs  notification_actor.rs  notifier.rs  order_actor.rs  tripsSerilizing.rs  user_actor.rs
server/src/db/: mod.rs
server/src/db/tables/: mod.rs  notification_info.rs  users.rs
server/src/routes/: mod.rs
server/src/routes/api/: autherization_route.rs  login.rs  logout.rs  mod.rs  order.rs  order_route.rs  registernewuser.rs  trips.rs
server/static/: service-worker.js
src/: lib.rs
