[package]
name = "api-structs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono="0.4.26"
[workspace]
members = ["server", "app", "mockserver","app/style_macros"]
default-members = ["server"]
