[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen="0.2.85"
leptos={version = "0.3.0",features = ["csr"]}
leptos_router={version = "0.3.0", features = ["csr"]}
leptos_reactive="0.3.0"
leptos_meta="0.3.0"
reqwasm = "0.5"
serde = { version = "1.0.160", features = ["derive"] }
serde_json="1.0.96"
thiserror="1"
console_log="1.0"
log="0.4.17"
styled="0.1.36"
styled_macro="0.1.4"
stylist="0.12.0"
csscolorparser="0.6.2"
gloo-net = "0.2"
gloo-storage = "0.2"