[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api-structs={path = ".."}
wasm-bindgen="0.2.86"
leptos={version = "0.3.1",features = ["csr"]}
leptos_router={version = "0.3.1", features = ["csr"]}
leptos_reactive="0.3.1"
leptos_meta="0.3.1"
reqwasm = "0.5"
serde = { version = "1.0.160", features = ["derive"] }
serde_json="1.0.96"
thiserror="1"
console_log="1.0"
log="0.4.17"
styled = "0.1.36"
styled_macro="0.1.4"
stylist = "0.12.0"
csscolorparser="0.6.2"
gloo-net = "0.3.0"
chrono="0.4.26"
gloo-storage = "0.2.2"
macros={path="../macros"}
style_macros={path = "./style_macros"}
web-sys = {version ="0.3.64",features = ["Notification","Document", "Window","HtmlDocument"]}