[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api-structs = { path = ".." }
wasm-bindgen = "0.2.87"
leptos = { version = "0.4.10", features = ["csr"] }
leptos_router = { version = "0.4.10", features = ["csr"] }
leptos_reactive = "0.4.10"
leptos_meta = "0.4.10"
reqwasm = "0.5.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
thiserror = "1.0.40"
console_log = "1.0.0"
log = "0.4.19"
styled = "0.1.36"
styled_macro = "0.1.4"
stylist = "0.12.0"
csscolorparser = "0.6.2"
gloo-net = { version = "0.4.0", features = ["json"] }
gloo-utils = { version = "0.2.0", features = ["serde"] }
chrono = "0.4.26"
gloo-storage = "0.2.2"
macros = { path = "../macros" }
style_macros = { path = "./style_macros" }
web-sys = { version = "0.3.63", features = [
    "Document",
    "Window",
    "HtmlDocument",
] }
js-sys = "0.3.64"
wasm-bindgen-futures = "0.4.37"
