[package]
name = "mockserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-session = { version = "0.7.2", features = ["cookie-session"] }
sea-orm = { version = "0.11.2", features = [ "sqlx-sqlite", "runtime-actix-rustls", "macros","debug-print", "serde_json"] }
actix = "0.13.0"
actix-cors = "0.6.4"
actix-http = "3.3.0"
actix-identity = "0.5.2"
actix-service = "2.0.2"
actix-web = "4.3.0"
actix-web-actors = "4.2.0"
actix-rt = "2.8.0"
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"
futures = "0.3.5"
futures-util = "0.3.5"
log = "0.4.0"
serde="1.0.158"
serde_json = "1.0.95"
macros = {path="../macros"}
bcrypt = "0.14.0"
colored="2.0.0"
slog="2.7.0"
slog-async="2.7.0"
slog-term="2.7.0"
chrono="0.4.24"
