[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
sea-orm = { version = "0.11.2", features = [ "sqlx-sqlite", "runtime-actix-rustls", "macros","debug-print", "serde_json"] }
serde="1.0.158"
serde_json="1.0.95"